# SimpleServer

./: .gitignore  CMakeLists.txt  README.md  config.conf  config.cpp  config.hpp  log.cpp  log.hpp  main.cpp  request.cpp  request.hpp  server.cpp  server.hpp  session.cpp  session.hpp  threadpool.hpp
root/: index.html
root/button/: index.html
root/php/: getb.php  hello.php
src/: config.cpp  main.cpp  session.cpp
